added alphabet switch functionl, using prompt

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <input type="text" id="message" value="ABCDEFGHIJKLMNOPQRSTUVWXYZ">
     <p>Type your shift here:</p>
     <input type="text" id="shift" value="20">
-    <p>Choose langueg:</p>
+    <!-- <p>Choose langueg:</p>
     <div>
-        <input type="radio" id="text" name="drone" value="eng">
+        <input type="radio" id="text" name="drone" value="eng" onclick="cezar(this.value);" checked>
         <label for="eng">English</label>
     </div>
 
     <div>
-        <input type="radio" id="text" name="drone" value="ukr" checked>
-        <label for="ukr">Українська</label>
+        <input type="radio" id="text" name="drone" value="ukr" onclick="cezar(this.value);">
+        <label for="ukr">Українська</label> -->
     </div>
     <p>Encoded message here:</p>
     <div id="output"></div>
