finalizing of file index.html eng, style.css padding, app.js eng

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="message-container-1">
             <p>Type your message here:</p>
             <textarea type="text" class="message" id="message" value="ABCDEFGHIJKLMNOPQRSTUVWXYZ" cols='48' rows="10"
-                placeholder="Start typing..."></textarea>
+                placeholder="Start typing...">byffi, gs hugy cm xcgu! uvwxyzabcdefghijklmnopqrst</textarea>
         </div>
         <div class="arrow-7">
             <span></span>
@@ -26,13 +26,13 @@
         </div>
         <div class="message-container-1">
             <p>Encrypted text:</p>
-            <textarea class="message" id="output" cols='48' rows="10"></textarea>
-        </div>
+            <textarea class="message" id="output" cols='48' rows="10" disabled="disabled"></textarea>
+        </div> 
     </div>
     <div class="parameters-container">
-        <p>Type your shift step here:</p>
-        <input type="text" id="shift" value="20">
-        <p>Choose language:</p>
+        <p>Type your shift step here (if you want to deencrypt text, put the "-" before the shift step):</p>
+        <input type="text" id="shift" value="-20">
+        <p>Choose your language:</p>
         <button type="button" class="button" id="button" value="chlang">Change</button>
     </div>
     <script src="./app.js"></script>
